//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Organisation {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  streetAddress String
  suburb String
  state String
  postcode String
  users User [not null]
  billing Billing
  billingId String
  buildingComplex BuildingComplex [not null]
  Notice Notice [not null]
}

Table BuildingComplex {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  type String [not null]
  totalOccupancies Int [not null]
  streetAddress String [not null]
  suburb String [not null]
  state String [not null]
  postcode String [not null]
  notice Notice [not null]
  organisation Organisation [not null]
  organisationId String [not null]
  user User [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String
  email String [unique, not null]
  emailVerified DateTime
  accounts Account [not null]
  sessions Session [not null]
  notices Notice [not null]
  organisation Organisation
  organisationId String
  buildingComplex BuildingComplex
  buildingComplexId String
}

Table Notice {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  author User [not null]
  authorId String [not null]
  fileName String [not null]
  fileSize Int [not null]
  fileType String [not null]
  uploadUrl String [not null]
  key String
  status String
  state String
  startDate DateTime
  endDate DateTime
  buildingComplex BuildingComplex
  buildingComplexId String
  organisation Organisation
  organisationId String
}

Table Billing {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fullName String
  phone String
  email String
  streetAddress String
  suburb String
  state String
  postcode String
  organisation Organisation [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  oauth_token_secret String
  oauth_token String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Ref: Organisation.billingId > Billing.id

Ref: BuildingComplex.organisationId > Organisation.id

Ref: User.organisationId > Organisation.id

Ref: User.buildingComplexId > BuildingComplex.id

Ref: Notice.authorId > User.id

Ref: Notice.buildingComplexId > BuildingComplex.id

Ref: Notice.organisationId > Organisation.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]